404-Apply-NSG-to-existing-subnet-BizTest/Archive/azuredeploy_old.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.1",
  "parameters": {
    "virtualNetworkResourceGroupName": {
      "type": "string",
      "metadata": {
        "description": "The resource group where the existing VNet is located."
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "The name of the existing VNet"
      }
    },
    "subnetName": {
      "type": "string",
      "defaultValue": "default",
      "metadata": {
        "description": "The name of the existing subnet."
      }
    },
    "nsgSecurityGroupName": {
      "type": "string",
      "defaultValue": "default",
      "metadata": {
        "description": "The name of the NSG Subnet"
      }

    },
    "nsgMgmntSubnet": {
      "type": "string",
      "defaultValue": "default",
      "metadata": {
        "description": "The Management IP subnet CIDR"
        }
      },
    "nsgAddsSubnet": {
      "type": "string",
      "defaultValue": "default",
      "metadata": {
        "description": "The AD IP subnet CIDR"
        }
      },
      "nsgTestodaSubnet":{
        "type": "string",
        "defaultValue": "default",
        "metadata": {
          "description": "The Citrix Infra IP subnet CIDR"
          }
        },
      "nsgCtxAppSubnet":{
          "type": "string",
          "defaultValue": "default",
          "metadata": {
            "description": "The Citrix App IP subnet CIDR"
            }
          },

     "_artifactsLocation": {
      "type": "string",
      "metadata": {
        "description": "The base URI where artifacts required by this template are located."
      },
      "defaultValue": "https://raw.githubusercontent.com/vys99AZBuild/AzureAutomation/master/403-Apply-NSG-to-existing-subnet-QlikTest/"
    },
    "_artifactsLocationSasToken": {
      "type": "securestring",
      "metadata": {
        "description": "The sasToken required to access _artifactsLocation."
      },
      "defaultValue": ""
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('nsgSecurityGroupName')]",
      "location": "[resourceGroup().location]",
      "apiVersion": "2018-03-01",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-winrm-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5985-5986",
              "sourceAddressPrefix": "[parameters('nsgMgmntSubnet')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-rdp-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('nsgMgmntSubnet')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1005,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-https-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('nsgMgmntSubnet')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1010,
              "direction": "Inbound"
            }
          },




          {
            "name": "Allow-ctxinfra-to-adds-dns-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1000,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-dns-Udp",
            "properties": {
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1005,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-krbtckt-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "88",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1010,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-krbtckt-Udp",
            "properties": {
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "88",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1015,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-ntptime-Udp",
            "properties": {
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "123",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1020,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-rpcmapper-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "135",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1025,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-krbpasswd-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "464",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1030,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-krbpasswd-Udp",
            "properties": {
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "464",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1035,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-ldap-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "389",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1040,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-ldapssl-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "636",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1045,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-gc-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3268",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1050,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-adds-gcssl-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3269",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
              "access": "Allow",
              "priority": 1055,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-rdp2-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1060,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-Internet-https-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "INTERNET",
              "access": "Allow",
              "priority": 3000,
              "direction": "Outbound"
            }
          },
          {
            "name": "Allow-ctxinfra-to-ctxapp-https-Tcp",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('nsgTestodaSubnet')]",
              "destinationAddressPrefix": "[parameters('nsgCtxappSubnet')]",
              "access": "Allow",
              "priority": 3005,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-08-01",
      "name": "deploy",
      "type": "Microsoft.Resources/deployments",
      "resourceGroup": "[parameters('virtualNetworkResourceGroupName')]",
      "dependsOn": [
        "[parameters('nsgSecurityGroupName')]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(parameters('_artifactsLocation'), concat('nested/updateSubnet.json', parameters('_artifactsLocationSasToken')))]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "virtualNetworkName": {
            "value": "[parameters('virtualNetworkName')]"
          },
          "subnetName": {
            "value": "[parameters('subnetName')]"
          },
          "subnetAddressPrefix": {
            "value": "[reference(resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName')), '2018-03-01').addressPrefix]"
          },
          "nsgId": {
            "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgSecurityGroupName'))]"
          }
        }
      }
    }
  ],
  "outputs": {}
}
